# mathparser

./: .clang-tidy  README.md
docs/uml/: mathparser_core.puml
scripts/: build.sh  format_all_cpp.py
src/: CMakeLists.txt
src/mathparser/: CMakeLists.txt
src/mathparser/include/mathparser/: coef_state.hpp  func_state.hpp  function_expression.hpp  function_map.hpp  iexpression.hpp  init_state.hpp  parser.hpp  parser_context.hpp  parser_state.hpp  trans_state.hpp
src/mathparser/include/mathparser/base_function/: add_function.hpp  base_function.hpp  brackets_function.hpp  coe_function.hpp  cos_function.hpp  div_function.hpp  mult_function.hpp  power_function.hpp  sin_function.hpp
src/mathparser/src/: coef_state.cpp  func_state.cpp  function_expression.cpp  function_map.cpp  init_state.cpp  parser.cpp  parser_context.cpp  parser_state.cpp
src/mathparser/src/base_function/: add_function.cpp  base_function.cpp  brackets_function.cpp  coe_function.cpp  cos_function.cpp  div_function.cpp  mult_function.cpp  power_function.cpp  sin_function.cpp
src/mathparser_exe/: CMakeLists.txt
src/mathparser_exe/src/: main.cpp
